# krav-ai

./: .env.example  .gitignore  README.md  pyproject.toml
backend/: build_knowledge_base.py  claude_coach.py  gemini_analyzer.py  rag_engine.py  requirements.txt  server.py  video_processor.py
backend/knowledge/documents/: biomechanics.md  common_errors.md  cross_technique.md  elbow_technique.md  hammer_fist_technique.md  hook_technique.md  jab_cross_combination.md  jab_technique.md  knee_technique.md  striking_fundamentals.md  uppercut_technique.md
backend/prompts/: claude_system.py  gemini_system.py
docs/plans/: 2026-02-25-krav-technique-feedback-design.md  2026-02-25-krav-technique-feedback-plan.md
frontend/: app.js  index.html  style.css
tests/: create_test_fixture.py  test_claude_coach.py  test_gemini_analyzer.py  test_integration.py  test_prompts.py  test_rag_engine.py  test_server.py  test_video_processor.py
