[project]
name = "krav-ai"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.84.0",
    "chromadb>=1.5.1",
    "fastapi>=0.133.0",
    "httpx>=0.28.1",
    "opencv-python-headless>=4.13.0.92",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.22",
    "sentence-transformers>=5.2.3",
    "uvicorn[standard]>=0.41.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
